--- a/src/maps/bigmap.css
+++ b/src/maps/bigmap.css
@@ -1,4 +1,50 @@
+.map-conainer{
+    display: flex;
+    height: 900px;
+}
 .mainn-mapp {
     width: 100vw;
-    height: 100vh;
+    height: 900px;
+}
+.custom-div-icon div.marker {
+    width: 50px;
+    height: 80px;
+    position: relative;
+    cursor: pointer;
+}
+
+.custom-div-icon div.image-holder {
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border: 2px solid white;  /* This adds a border around the image. Optional */
+}
+.holder {
+    text-align: center;
+}
+.holder img {
+    width: 150px;
+    margin: 0 auto;
+}
+.custom-div-icon img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;  /* Keeps the image aspect ratio */
+}
+
+.custom-div-icon div.pin-tail {
+    width: 10px;
+    height: 40px;
+    background-color: #4285F4; /* Google blue color, adjust as needed */
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    transform: translateX(-50%);
+    z-index: -1;
+    clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
 }
