--- a/src/maps/tabs.css
+++ b/src/maps/tabs.css
@@ -1,12 +1,15 @@
 .tabs-container{
     width: 30%;
     height: inherit;
-    background-color: green;
     overflow: scroll;
     -ms-overflow-style: none;  /* Internet Explorer 10+ */
     scrollbar-width: none;  /* Firefox */
 }
 .tabs-container::-webkit-scrollbar{
     display: none;  /* Safari and Chrome */
+
+}
+.tabs-container h1 p{
+    padding-top: 20px;
 
 }
