--- a/src/maps/historymap.css
+++ b/src/maps/historymap.css
@@ -1,4 +1,6 @@
 .map-conainer{
+    padding-top: 300px;
+    padding-bottom: 400px;
     max-width: 100vw;
     margin: 0 auto;
     background-color: #FDFBFB;
